- [nvr_core][apiserver][estimates] Fix nil instance issue. - [nvr_core][apiserver] Add export APIs.
